--- a/modules/party_cog/view/party_tree.xml
+++ b/modules/party_cog/view/party_tree.xml
@@ -3,16 +3,15 @@
 this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath expr="/tree/field[@name='name']" position="before">
-        <field name="full_name"/>
+        <field name="full_name" expand="1"/>
     </xpath>
     <xpath expr="/tree/field[@name='name']" position="replace"/>
     <xpath expr="/tree/field[@name='lang']" position="replace"/>
     <xpath expr="/tree" position="inside">
         <field name="is_person" tree_invisible="1"/>
-        <field name="main_address"/>
+        <field name="main_address" expand="1"/>
         <field name="is_anonymized" tree_invisible="1"/>
         <field name="active" tree_invisible="1"/>
-        <field name="planned_anonymization_date"/>
         <button name="button_extract_gdpr_data" string="Extract GDPR Data" tree_invisible="1"/>
     </xpath>
 </data>
