party_public_employment: Work subdivision and country must be required only for public employment (#3636)

--- a/modules/party_public_employment/view/employment_version_form.xml
+++ b/modules/party_public_employment/view/employment_version_form.xml
@@ -15,6 +15,7 @@
         <field name="work_subdivision"/>
         <label name="work_country"/>
         <field name="work_country"/>
+        <field name="is_civil_service_employment" invisible="1"/>
     </xpath>
     <xpath expr="/form/field[@name='annual_salary_premium']" position="after">
         <newline/>
