contract: Add function to define the contract_number (#3638)
Fix #00000

--- a/modules/contract/view/contract_form.xml
+++ b/modules/contract/view/contract_form.xml
@@ -57,6 +57,8 @@ this repository contains the full copyright notices and license terms. -->
                 <field name="signature_date"/>
                 <label name="appliable_conditions_date"/>
                 <field name="appliable_conditions_date"/>
+                <label name="contract_number"/>
+                <field name="contract_number"/>
                 <label name="quote_number"/>
                 <field name="quote_number"/>
             </group>
