--- a/modules/report_engine/view/report_template_form.xml
+++ b/modules/report_engine/view/report_template_form.xml
@@ -44,6 +44,8 @@ this repository contains the full copyright notices and license terms. -->
         <page name="parameters">
             <field name="parameters" colspan="4"/>
         </page>
+        <page string="Filters" id="filters">
+        </page>
         <page name="tags">
             <field name="tags" colspan="4"/>
         </page>
