--- a/modules/document_request/view/document_request_line_list.xml
+++ b/modules/document_request/view/document_request_line_list.xml
@@ -8,7 +8,7 @@ this repository contains the full copyright notices and license terms. -->
     <field name="send_date"/>
     <field name="reception_date"/>
     <field name="document_desc" expand="1"/>
-    <field name="for_object"/>
+    <field name="for_object_selection"/>
     <field name="attachment"/>
     <field name="attachment_data"/>
     <button string="Validate" name="validate_attachment"/>
@@ -16,4 +16,6 @@ this repository contains the full copyright notices and license terms. -->
     <button string="Invalidate" name="invalidate_attachment"/>
     <field name="allow_force_receive" tree_invisible="1"/>
     <field name="attachment_status" tree_invisible="1"/>
+    <field name="for_object" tree_invisible="1"/>
+    <field name="added_manually" tree_invisible="1"/>
 </tree>
