--- a/modules/loan/view/contract_form.xml
+++ b/modules/loan/view/contract_form.xml
@@ -2,18 +2,24 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/notebook/page[@id='data']" position="inside">
-        <newline/>
-        <label name="show_ordered_loans"/>
-        <field name="show_ordered_loans"/>
-        <field name="loans" colspan="4" mode="tree,form" view_ids="loan.ordered_loan_view_list,loan.loan_no_button_view_form"/>
-        <field name="ordered_loans" colspan="4"/>
-    </xpath>
     <xpath expr="//page[@id='cov_elements']/group[@id='covered_element']" position="inside">
         <field name="multi_mixed_view" group="multi_mixed_view" mode="form" relation="loan.share" relation_field="option" view_ids="loan.loan_share_view_form" expand_toolbar="0"/>
     </xpath>
     <xpath expr="/form">
         <newline/>
         <field name="is_loan" invisible="1"/>
+    </xpath>
+    <xpath expr="/form/notebook/page[@id='data']" position="after">
+        <page string="Loan" id="loan">
+            <label name="show_ordered_loans"/>
+            <field name="show_ordered_loans"/>
+            <separator name="loans" colspan="4"/>
+            <field name="loans" colspan="4" mode="tree,form" view_ids="loan.ordered_loan_view_list,loan.loan_no_button_view_form" expand_toolbar="0"/>
+            <field name="ordered_loans" colspan="4" expand_toolbar="0"/>
+            <separator name="linked_loan_contracts" colspan="2"/>
+            <separator name="co_borrowers" colspan="2"/>
+            <field name="linked_loan_contracts" colspan="2" expand_toolbar="0"/>
+            <field name="co_borrowers" colspan="2" expand_toolbar="0"/>
+        </page>
     </xpath>
 </data>
