--- a/modules/document_request/view/document_request_line_form.xml
+++ b/modules/document_request/view/document_request_line_form.xml
@@ -19,12 +19,16 @@ this repository contains the full copyright notices and license terms. -->
     <newline/>
     <label name="for_object" xalign="0"/>
     <field name="for_object" colspan="5"/>
-    <separator name="details" colspan="6"/>
-    <field name="details" colspan="6"/>
-    <newline/>
     <label name="attachment" xalign="0"/>
     <field name="attachment" colspan="4"/>
     <field name="attachment_data"/>
-    <field name="matching_attachments" colspan="6"/>
+    <notebook colspan="6">
+        <page name="details">
+            <field name="details"/>
+        </page>
+        <page name="matching_attachments">
+            <field name="matching_attachments"/>
+        </page>
+    </notebook>
     <field name="allow_force_receive" invisible="1"/>
 </form>
