--- a/modules/contract/view/wizard_option_tree.xml
+++ b/modules/contract/view/wizard_option_tree.xml
@@ -3,6 +3,6 @@
 this repository contains the full copyright notices and license terms. -->
 <tree editable="bottom">
     <field name="is_selected"/>
-    <field name="name"/>
+    <field name="name" expand="1"/>
     <field name="selection" tree_invisible="1"/>
 </tree>
