--- a/modules/contract_insurance/view/select_package_per_covered_list.xml
+++ b/modules/contract_insurance/view/select_package_per_covered_list.xml
@@ -2,6 +2,6 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree editable="bottom">
-    <field name="covered"/>
-    <field name="package" widget="selection"/>
+    <field name="covered" expand="1"/>
+    <field name="package" widget="selection" expand="1"/>
 </tree>
