--- a/modules/document_request/view/document_request_line_card.xml
+++ b/modules/document_request/view/document_request_line_card.xml
@@ -4,8 +4,8 @@ this repository contains the full copyright notices and license terms. -->
 <form col="8">
     <label name="document_desc"/>
     <field name="document_desc"/>
-    <label name="for_object"/>
-    <field name="for_object"/>
+    <label name="for_object_selection"/>
+    <field name="for_object_selection"/>
     <label name="blocking"/>
     <field name="blocking"/>
     <label name="received"/>
@@ -31,4 +31,6 @@ this repository contains the full copyright notices and license terms. -->
             <button string="Validate Attachment" name="validate_attachment"/>
         </group>
     </group>
+    <field name="for_object" invisible="1"/>
+    <field name="added_manually" invisible="1"/>
 </form>
