--- a/modules/document_request/view/document_request_line_wo_buttons_list.xml
+++ b/modules/document_request/view/document_request_line_wo_buttons_list.xml
@@ -8,8 +8,10 @@ this repository contains the full copyright notices and license terms. -->
     <field name="send_date"/>
     <field name="reception_date"/>
     <field name="document_desc"/>
-    <field name="for_object"/>
+    <field name="for_object_selection"/>
     <field name="attachment"/>
     <field name="attachment_name"/>
     <field name="allow_force_receive" tree_invisible="1"/>
+    <field name="for_object" tree_invisible="1"/>
+    <field name="added_manually" tree_invisible="1"/>
 </tree>
