--- a/modules/document_request/view/document_description_form_depend_offered.xml
+++ b/modules/document_request/view/document_description_form_depend_offered.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/field[@name='when_received']" position="after">
+    <xpath expr="/form/label[@name='paper_form']" position="before">
         <label name="template"/>
         <field name="template"/>
     </xpath>
