--- a/modules/document_request/view/document_description_list.xml
+++ b/modules/document_request/view/document_description_list.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/tree/field[@name='when_received']" position="after">
-        <field name="reception_requires_attachment"/>
+    <xpath expr="/tree" position="inside">
+        <field name="customizable"/>
     </xpath>
 </data>
