--- a/modules/document_request/view/document_request_line_wo_buttons_list.xml
+++ b/modules/document_request/view/document_request_line_wo_buttons_list.xml
@@ -7,8 +7,9 @@ this repository contains the full copyright notices and license terms. -->
     <field name="request_date"/>
     <field name="send_date"/>
     <field name="reception_date"/>
-    <field name="document_desc"/>
     <field name="for_object_selection"/>
+    <field name="document_desc" expand="1"/>
+    <field name="name"/>
     <field name="attachment"/>
     <field name="attachment_name"/>
     <field name="allow_force_receive" tree_invisible="1"/>
