--- a/modules/document_request_electronic_signature/view/document_description_form.xml
+++ b/modules/document_request_electronic_signature/view/document_description_form.xml
@@ -2,8 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/field[@name='reception_requires_attachment']" position="after">
-        <newline/>
+    <xpath expr="//field[@name='prerequisite']" position="after">
         <label name="digital_signature_required"/>
         <field name="digital_signature_required"/>
     </xpath>
