--- a/modules/document_request_electronic_signature/view/document_description_list.xml
+++ b/modules/document_request_electronic_signature/view/document_description_list.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/tree/field[@name='reception_requires_attachment']" position="after">
+    <xpath expr="/tree/field[@name='customizable']" position="after">
         <field name="digital_signature_required"/>
     </xpath>
 </data>
